Fri Aug 20 20:03:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/LocalityManager/UnexpectedShutdown:
        * DAnCE/tests/LocalityManager/UnexpectedShutdown/Component.cdp:
        * DAnCE/tests/LocalityManager/UnexpectedShutdown/UnexpectedShutdown.idl:
        * DAnCE/tests/LocalityManager/UnexpectedShutdown/UnexpectedShutdown.mpc:
        * DAnCE/tests/LocalityManager/UnexpectedShutdown/UnexpectedShutdown_exec.h:
        * DAnCE/tests/LocalityManager/UnexpectedShutdown/UnexpectedShutdown_exec.cpp:
        * DAnCE/tests/LocalityManager/UnexpectedShutdown/run_test.pl:

          Test excercising the detection of early shutdown locality manager.  This
          test is currently intentionally not part of the test list as there is still
          an outstanding (benign) error message.

Fri Aug 20 20:03:03 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:

          If a locality is terminated unexpectedly, don't try to call shutdown
          during a scheduled teardown on that instance.

Fri Aug 20 20:01:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Deployment/Handlers/Connection_Handler.cpp:

          If externalReferenceEndpoints have a zero-length port name, attempt
          to connect as a CORBA 2.x reference.

Fri Aug 20 15:30:11 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors.idl:
        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors_Base_Impl.h:
        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors_Base_Impl.cpp:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.h:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
        * DAnCE/LocalityManager/Handler/LocalityHandler.mpc:
        * DAnCE/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp:

          Add additional interception point that is invoked on unexpected