@@ -36,9 +36,9 @@ namespace DAnCE
   
   void
   SHS_Interceptor::post_install (const ::Deployment::DeploymentPlan &plan,
-                                          ::CORBA::ULong index,
-                                          const ::CORBA::Any &/*reference*/,
-                                          const ::CORBA::Any &exception)
+                                 ::CORBA::ULong index,
+                                 const ::CORBA::Any &reference,
+                                 const ::CORBA::Any &exception)
   {
     ::DAnCE::SHS::Status_Update update;
     CORBA::ULong mdd_idx = plan.instance[index].implementationRef;
@@ -46,22 +46,28 @@ namespace DAnCE
     update.id = plan.instance[index].name.in ();
     update.type = 
       DAnCE::Utility::get_instance_type (plan.implementation[mdd_idx].execParameter);
+    CORBA::ULong idx (0);
     
     if (exception.type() != ::CORBA::_tc_null)
       {
         std::string result;
         DAnCE::Utility::stringify_exception_from_any (exception,
                                                       result);
-        
         update.new_status = DAnCE::SHS::INST_ERROR;
-        update.instance_info.length (1);
-        update.instance_info[0].name = ::DAnCE::SHS::Constants::SHS_DIAGNOSTIC;
-        update.instance_info[0].value <<= CORBA::Any::from_string (result.c_str (), 0);
+        update.instance_info.length (idx + 1);
+        update.instance_info[idx].name = ::DAnCE::SHS::Constants::SHS_DIAGNOSTIC;
+        update.instance_info[idx].value <<= CORBA::Any::from_string (result.c_str (), 0);
+        
+        ++idx;
       }
     else
       {
         update.new_status = DAnCE::SHS::INST_INSTALLED;
       }
+    
+    update.instance_info.length (idx + 1);
+    update.instance_info[idx].name = ::DAnCE::SHS::Constants::SHS_INSTANCE_REF;
+    update.instance_info[idx].value = reference;
     
     if (this->shs_transport_.get ())
       this->shs_transport_->push_event (update);
@@ -69,14 +75,15 @@ namespace DAnCE
 
   void
   SHS_Interceptor::post_connect (const ::Deployment::DeploymentPlan &plan,
-                                         ::CORBA::ULong connection,
-                                         const ::CORBA::Any &exception)
+                                 ::CORBA::ULong connection,
+                                 const ::CORBA::Any &exception)
   {
     ::DAnCE::SHS::Status_Update update;
-
-    update.id = plan.connection[connection].name.in ();
+    const ::Deployment::PlanConnectionDescription &pcd = plan.connection[connection];
+    update.id = pcd.name.in ();
     update.type = DAnCE::SHS::Constants::SHS_CONNECTION;
-      
+    CORBA::ULong info_idx (0);
+
     if (exception.type() != ::CORBA::_tc_null)
       {
         std::string result;
@@ -84,23 +91,53 @@ namespace DAnCE
                                                       result);
         
         update.new_status = DAnCE::SHS::INST_ERROR;
-        update.instance_info.length (1);
-        update.instance_info[0].name = ::DAnCE::SHS::Constants::SHS_DIAGNOSTIC;
-        update.instance_info[0].value <<= CORBA::Any::from_string (result.c_str (), 0);
+        update.instance_info.length (info_idx + 1);
+        update.instance_info[info_idx].name = ::DAnCE::SHS::Constants::SHS_DIAGNOSTIC;
+        update.instance_info[info_idx].value <<= CORBA::Any::from_string (result.c_str (), 0);
+        ++info_idx;
       }
     else
       {
         update.new_status = DAnCE::SHS::INST_ACTIVE;
       }
+    
+    for (CORBA::ULong i = 0; i < pcd.internalEndpoint.length (); ++i)
+      {
+        std::string id (plan.instance[pcd.internalEndpoint[i].instanceRef].name.in ());
+        id += ':';
+        id += pcd.internalEndpoint[i].portName.in ();
 
+        update.instance_info.length (info_idx + 1);
+        
+        if (pcd.internalEndpoint[i].provider)
+          {
+            update.instance_info[info_idx].name = DAnCE::SHS::Constants::SHS_CONN_PROVIDER;
+          }
+        else 
+          {
+            update.instance_info[info_idx].name = DAnCE::SHS::Constants::SHS_CONN_RECIPIENT;
+          }
+
+        update.instance_info[info_idx].value <<= CORBA::Any::from_string (id.c_str (), 0);
+        ++info_idx;
+      }
+
+    for (CORBA::ULong i = 0; i < pcd.externalEndpoint.length (); ++i)
+      {
+        update.instance_info.length (info_idx + 1);
+        update.instance_info[info_idx].name = DAnCE::SHS::Constants::SHS_CONN_EXTERNAL_ENDPOINT;
+        update.instance_info[info_idx].value <<= pcd.externalEndpoint[i];
+        ++info_idx;
+      }
+    
     if (this->shs_transport_.get ())
       this->shs_transport_->push_event (update);
   }
   
   void 
   SHS_Interceptor::post_configured (const ::Deployment::DeploymentPlan & plan,
-                                            ::CORBA::ULong index,
-                                            const ::CORBA::Any &exception )
+                                    ::CORBA::ULong index,
+                                    const ::CORBA::Any &exception )
   {
     ::DAnCE::SHS::Status_Update update;
     CORBA::ULong mdd_idx = plan.instance[index].implementationRef;
@@ -132,8 +169,8 @@ namespace DAnCE
   
   void
   SHS_Interceptor::post_activate (const ::Deployment::DeploymentPlan & plan,
-                                       ::CORBA::ULong index,
-                                       const ::CORBA::Any & exception)
+                                  ::CORBA::ULong index,
+                                  const ::CORBA::Any & exception)
   {
     ::DAnCE::SHS::Status_Update update;
     CORBA::ULong mdd_idx = plan.instance[index].implementationRef;
@@ -165,8 +202,8 @@ namespace DAnCE
   
   void
   SHS_Interceptor::post_passivate (const ::Deployment::DeploymentPlan & plan,
-                                        ::CORBA::ULong index,
-                                        const ::CORBA::Any & exception)
+                                   ::CORBA::ULong index,
+                                   const ::CORBA::Any & exception)
   {
     ::DAnCE::SHS::Status_Update update;
     CORBA::ULong mdd_idx = plan.instance[index].implementationRef;
@@ -198,8 +235,8 @@ namespace DAnCE
   
   void
   SHS_Interceptor::post_remove (const ::Deployment::DeploymentPlan & plan,
-                                     ::CORBA::ULong index,
-                                     const ::CORBA::Any & exception)
+                                ::CORBA::ULong index,
+                                const ::CORBA::Any & exception)
   {
     ::DAnCE::SHS::Status_Update update;
     CORBA::ULong mdd_idx = plan.instance[index].implementationRef;
@@ -227,7 +264,7 @@ namespace DAnCE
     if (this->shs_transport_.get ())
       this->shs_transport_->push_event (update);
   }
- }
+}
 
 extern "C"
 {
